feat: add configuration swagger

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -13,11 +13,11 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:8000",
+      "applicationUrl": "https://localhost:8001;http://localhost:8001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchUrl": "swagger"
     },
     "https": {
       "commandName": "Project",
